assets/styles.css
*{ 
  padding:0;
  margin: 0;
  font-family: 'Shadows Into Light' cursive;
  box-sizing:border-box;
}
.hero{
  height: 100vh;
  width: 100%; 
  background-image: url(https://images.unsplash.com/photo-1535242208474-9a2793260ca8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Z3JlZW5lcnl8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=1400&q=60);
  background-size: cover;
  background position:center;
}
nav{
  display: flex;
  align-items: center; 
  justify-content: space-between;
  padding-top: 45px;
  padding-left: 8%;
  padding-right: 8%;
}
.logo{
  color: var(--grey);
  font-size: 35px;
  letter-spacing: 20px;
  cursor:pointer;
}
span{
  color: hotpink;
}
nav ul li{ 
  list-style-type: none;
  display: inline-block;
  padding: 10px 25px 10px 12px;
}
nav ul li a{
  color: var(--grey);
  text-decoration: none;
  font-weight: bold;
  text-transform: capitalize;
}
nav ul li a:hover{
  color:var(--hot-pink);
  transition: 0.4s;;
  -webkit-transition:.4s;
  -moz-transition:.4s;
  -ms-transition:.4s;
  -o-transition:.4s;
}
.btn{
  background-color:var(--crimson);
  color: var(--grey);
  text-decoration: none;
  border: 2px solid transparent;
  font-weight: bold;
  padding: 2px 25px;
  border-radius: 30px;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  -o-border-radius: 30px;
  transition: transform .4s;
  -webkit-transition: transform .4s;
  -moz-transition: transform .4s;
  -ms-transition: transform .4s;
  -o-transition: transform .4s;
}
.btn:hover{
  transform:scale(1.2);
  -webkit-transform:scale(1.2);
  -moz-transform:scale(1.2);
  -ms-transform:scale(1.2);
  -o-transform:scale(1.2);
}
.content{
  position:absolute;
  top: 50%;
  left:8%;
  transform:translateY(-50%);
  -webkit-transform:translateY(-50%);
  -moz-transform:translateY(-50%);
  -ms-transform:translateY(-50%);
  -o-transform:translateY(-50%);
}
h1{
  color: var(--grey);
  margin-bottom: 20px 0px 20px;
  font-size: 75px;
  letter-spacing: 24px;
}
h3{
  color:var(--grey);
  font-size:25px; 
  margin-bottom: 50px;
}
h4{
  color: var(--blue);
  letter-spacing: 6px;
  font-size: 20px;
}
.email form{
  width: 380px;
  max-width: 100%;
  position: relative;
}
.email form input:first-child{
  display: inline-block;
  width: 100%;
  padding: 14px 130px 14px 15px;
  border: 2px solid var(--blue);
  outline: none;
  border-radius:30px;
  -webkit-border-radius:30px;
  -moz-border-radius:30px;
  -ms-border-radius:30px;
  -o-border-radius:30px;
}
.email form input:last-child{
  position: absolute;
  display: inline-block;
  outline: none;
  border:none;
  padding: 10px 30px;
  border-radius:30px;
  -webkit-border-radius:30px;
  -moz-border-radius:30px;
  -ms-border-radius:30px;
  -o-border-radius:30px;
  background-color: var(--blue);
  color: var(--grey);
  box-shadow: 0px 0px 5px var(--dark), 0px 0px 15px #858585;
  top: 6px;
  right: 6px;
}
.about{
  width: 100%;
  padding:10px 0px;
  background-color: rgb(46, 53, 75);
}
.about img{
  height: auto; 
  width: 750px;
}
.about-text{
  width: 550px;
}
.main{
  width: 1130px;
  max-width: 90%;
  margin: 0 auto;
  display:flex;
  align-items:center;
  justify-content: space-around;
}
.about-text h2{
  color: var(--grey);
  font-size: 75px; 
  text-transform: capitalize;
  margin-bottom: 20px;
}
.about-text h5{
  color: var(--grey);
  letter-spacing: 2px;
  font-size: 22px;
  margin-bottom: 22px;
  text-transform: capitalize;
}
.about-text p{
  color: var(--light-blue);
  letter-spacing: 2px;
  line-height: 28px;
  font-size: 18px;
  margin-bottom: 45px;
}
button{
  background-color: var(--crimson);
  color: var(--grey);
  text-decoration: none;
  border: 2px solid transparent;
  font-weight: bold;
  padding: 13px 30px;
  border-radius: 30px;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  -o-border-radius: 30px;
  transition: .4s;
  -webkit-transition: .4s;
  -moz-transition: .4s;
  -ms-transition: .4s;
  -o-transition: .4s;
}
button:hover{
  background-color: transparent;
  border: 2px solid var(--crimson);
  cursor: pointer;
}

.skills{
  background: var(--dark);
  width: 100%;
  padding: 100px 0px;
}
.title h2{
  color: #f9ff41;
  font-size: 75px;
  width: 1130px;
  margin: 60px auto;
  text-align: center;
}
.box{
  display: flex; 
  justify-content: center;
  align-items: center;
  min-height: 400px;
}
.card{
  height: 365px;
  width: 335px;
  padding: 20px 35px;
  background: var(--light-blue);
  border-radius: 20px;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  -ms-border-radius: 20px;
  -o-border-radius: 20px;
  margin: 15px;
  position: relative;
  overflow:hidden;
  text-align: center;
}
.card i{
  font-size: 50px; 
  display:block;
  text-align:center;
  margin: 20px 0px;
  color: var(--crimson);
}
h5{
  color:#f9ff41;
  font-size: 23px;
  margin-bottom: 15px;
}
.pra p{
  color: var(--dark);
  font-size: 16px;
  line-height: 27px;
  margin-bottom: 25px;
}

.card .button{
  background-color: var(--crimson);
  color: var(--grey);
  text-decoration: none;
  border: 2px solid transparent;
  font-weight: bold;
  padding: 9px 22px;
  border-radius: 30px;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  -o-border-radius: 30px;
  transition: .4s;
  -webkit-transition: .4s;
  -moz-transition: .4s;
  -ms-transition: .4s;
  -o-transition: .4s;
}
.card .button:hover{
  background-color: transparent;
  border: 2px solid var(--crimson);
  cursor: pointer;
}
.contact-me{
  width: 100% 
  height: 29px; 
  background: var(--dark);
  display:flex; 
  align-items: center; 
  flex-direction: column;
  justify-content: center;
}
.contact-me p{
  color: var(--grey);
  font-size: 30px; 
  font-weight: bold; 
  margin-top: 25px;
}
.contact-me .button-two{ 
  background-color: var(--crimson);
  color: var(--grey);
  text-decoration: none;
  border: 2px solid transparent;
  font-weight: bold;
  padding: 13px 30px;
  border-radius: 30px;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  -o-border-radius: 30px;
  transition: .4s;
  -webkit-transition: .4s;
  -moz-transition: .4s;
  -ms-transition: .4s;
  -o-transition: .4s;
}
.contact-me .button-two:hover{
  background-color: transparent;
  border: 2px solid #5CD85A;
  cursor: pointer;
}
footer{
  position: relative;
  width: 100%;
  height: 200px; 
  background: var(--background);
  display: flex;
  flex-direction:column;
  align-items: center; 
  justify-content: center;
}
footer p:nth-child(1){
  font-size: 30px; 
  color: var(--grey);
  margin-bottom: 20px;
  font-weight: bold;
}
footer p:nth-child(2){
  color: var(--grey);
  font-size: 17px;
  width: 500px;
  text-align:center; 

}





:root{
  --light-blue:#c4dfdf;
  --blue: #08D9D6;
  --dark: #252a34;
  --hot-pink: hotpink;
  --crimson:#ff2e63;
  --grey:#eaeaea;
  --purple: #603f8b;
  --violet: #a16ae8;
  --fuscha: #fd49a0;
  --aqua: #b4fee7;
  --background: rgb(46, 53, 75);
}

